baby_duckParser.py
# Generated from baby_duck.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


from funciones import *


class baby_duckParser ( Parser ):

    grammarFileName = "baby_duck.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'program'", "';'", "'main'", "'end'", 
                     "'var'", "':'", "','", "'{'", "'}'", "'print'", "'('", 
                     "')'", "'while'", "'do'", "'if'", "'else'", "'<'", 
                     "'>'", "'!='", "'void'", "'['", "']'", "'='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "EQ", "OPER_EXP", 
                      "OPER_TERM", "TYPE", "ID", "CTE_INT", "CTE_FLOAT", 
                      "CTE_STRING", "WHITESPACE" ]

    RULE_programa = 0
    RULE_vars = 1
    RULE_varlist = 2
    RULE_body = 3
    RULE_statement = 4
    RULE_print = 5
    RULE_assign = 6
    RULE_cycle = 7
    RULE_condition = 8
    RULE_expresion = 9
    RULE_oper_rel = 10
    RULE_exp = 11
    RULE_termino = 12
    RULE_factor = 13
    RULE_funcs = 14
    RULE_params = 15
    RULE_f_call = 16
    RULE_cte = 17

    ruleNames =  [ "programa", "vars", "varlist", "body", "statement", "print", 
                   "assign", "cycle", "condition", "expresion", "oper_rel", 
                   "exp", "termino", "factor", "funcs", "params", "f_call", 
                   "cte" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    EQ=23
    OPER_EXP=24
    OPER_TERM=25
    TYPE=26
    ID=27
    CTE_INT=28
    CTE_FLOAT=29
    CTE_STRING=30
    WHITESPACE=31

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(baby_duckParser.ID, 0)

        def body(self):
            return self.getTypedRuleContext(baby_duckParser.BodyContext,0)


        def vars_(self):
            return self.getTypedRuleContext(baby_duckParser.VarsContext,0)


        def funcs(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(baby_duckParser.FuncsContext)
            else:
                return self.getTypedRuleContext(baby_duckParser.FuncsContext,i)


        def getRuleIndex(self):
            return baby_duckParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = baby_duckParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(baby_duckParser.T__0)
            self.state = 37
            self.match(baby_duckParser.ID)
            self.state = 38
            self.match(baby_duckParser.T__1)
            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 39
                self.vars_()


            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==20:
                self.state = 42
                self.funcs()
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 48
            self.match(baby_duckParser.T__2)
            self.state = 49
            self.body()
            self.state = 50
            self.match(baby_duckParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._varlist = None # VarlistContext
            self._TYPE = None # Token

        def varlist(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(baby_duckParser.VarlistContext)
            else:
                return self.getTypedRuleContext(baby_duckParser.VarlistContext,i)


        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(baby_duckParser.TYPE)
            else:
                return self.getToken(baby_duckParser.TYPE, i)

        def getRuleIndex(self):
            return baby_duckParser.RULE_vars

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVars" ):
                listener.enterVars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVars" ):
                listener.exitVars(self)




    def vars_(self):

        localctx = baby_duckParser.VarsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_vars)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(baby_duckParser.T__4)
            self.state = 59 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 53
                localctx._varlist = self.varlist()
                self.state = 54
                self.match(baby_duckParser.T__5)
                self.state = 55
                localctx._TYPE = self.match(baby_duckParser.TYPE)
                agregar_vars((None if localctx._varlist is None else self._input.getText(localctx._varlist.start,localctx._varlist.stop)), (None if localctx._TYPE is None else localctx._TYPE.text))
                self.state = 57
                self.match(baby_duckParser.T__1)
                self.state = 61 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==27):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(baby_duckParser.ID)
            else:
                return self.getToken(baby_duckParser.ID, i)

        def getRuleIndex(self):
            return baby_duckParser.RULE_varlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarlist" ):
                listener.enterVarlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarlist" ):
                listener.exitVarlist(self)




    def varlist(self):

        localctx = baby_duckParser.VarlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(baby_duckParser.ID)
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 64
                self.match(baby_duckParser.T__6)
                self.state = 65
                self.match(baby_duckParser.ID)
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(baby_duckParser.StatementContext)
            else:
                return self.getTypedRuleContext(baby_duckParser.StatementContext,i)


        def getRuleIndex(self):
            return baby_duckParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)




    def body(self):

        localctx = baby_duckParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(baby_duckParser.T__7)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 134259712) != 0):
                self.state = 72
                self.statement()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 78
            self.match(baby_duckParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self):
            return self.getTypedRuleContext(baby_duckParser.AssignContext,0)


        def condition(self):
            return self.getTypedRuleContext(baby_duckParser.ConditionContext,0)


        def cycle(self):
            return self.getTypedRuleContext(baby_duckParser.CycleContext,0)


        def f_call(self):
            return self.getTypedRuleContext(baby_duckParser.F_callContext,0)


        def print_(self):
            return self.getTypedRuleContext(baby_duckParser.PrintContext,0)


        def getRuleIndex(self):
            return baby_duckParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = baby_duckParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_statement)
        try:
            self.state = 85
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.assign()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                self.condition()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 82
                self.cycle()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 83
                self.f_call()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 84
                self.print_()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(baby_duckParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(baby_duckParser.ExpresionContext,i)


        def CTE_STRING(self, i:int=None):
            if i is None:
                return self.getTokens(baby_duckParser.CTE_STRING)
            else:
                return self.getToken(baby_duckParser.CTE_STRING, i)

        def getRuleIndex(self):
            return baby_duckParser.RULE_print

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint" ):
                listener.enterPrint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint" ):
                listener.exitPrint(self)




    def print_(self):

        localctx = baby_duckParser.PrintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_print)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(baby_duckParser.T__9)
            self.state = 88
            self.match(baby_duckParser.T__10)
            self.state = 93
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11, 24, 27, 28, 29]:
                self.state = 89
                self.expresion()
                print_expresion()
                pass
            elif token in [30]:
                self.state = 92
                self.match(baby_duckParser.CTE_STRING)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 95
                self.match(baby_duckParser.T__6)
                self.state = 100
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [11, 24, 27, 28, 29]:
                    self.state = 96
                    self.expresion()
                    print_expresion()
                    pass
                elif token in [30]:
                    self.state = 99
                    self.match(baby_duckParser.CTE_STRING)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 107
            self.match(baby_duckParser.T__11)
            self.state = 108
            self.match(baby_duckParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._ID = None # Token

        def ID(self):
            return self.getToken(baby_duckParser.ID, 0)

        def EQ(self):
            return self.getToken(baby_duckParser.EQ, 0)

        def expresion(self):
            return self.getTypedRuleContext(baby_duckParser.ExpresionContext,0)


        def getRuleIndex(self):
            return baby_duckParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)




    def assign(self):

        localctx = baby_duckParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            localctx._ID = self.match(baby_duckParser.ID)
            push_operando((None if localctx._ID is None else localctx._ID.text), 'ID')
            self.state = 112
            self.match(baby_duckParser.EQ)
            push_operador('=')
            self.state = 114
            self.expresion()
            pop_assign()
            self.state = 116
            self.match(baby_duckParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CycleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body(self):
            return self.getTypedRuleContext(baby_duckParser.BodyContext,0)


        def expresion(self):
            return self.getTypedRuleContext(baby_duckParser.ExpresionContext,0)


        def getRuleIndex(self):
            return baby_duckParser.RULE_cycle

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCycle" ):
                listener.enterCycle(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCycle" ):
                listener.exitCycle(self)




    def cycle(self):

        localctx = baby_duckParser.CycleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_cycle)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(baby_duckParser.T__12)
            self.state = 119
            self.body()
            self.state = 120
            self.match(baby_duckParser.T__13)
            self.state = 121
            self.match(baby_duckParser.T__10)
            self.state = 122
            self.expresion()
            self.state = 123
            self.match(baby_duckParser.T__11)
            self.state = 124
            self.match(baby_duckParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self):
            return self.getTypedRuleContext(baby_duckParser.ExpresionContext,0)


        def body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(baby_duckParser.BodyContext)
            else:
                return self.getTypedRuleContext(baby_duckParser.BodyContext,i)


        def getRuleIndex(self):
            return baby_duckParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)




    def condition(self):

        localctx = baby_duckParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_condition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(baby_duckParser.T__14)
            self.state = 127
            self.match(baby_duckParser.T__10)
            self.state = 128
            self.expresion()
            self.state = 129
            self.match(baby_duckParser.T__11)
            if1()
            self.state = 131
            self.body()
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==16:
                self.state = 132
                self.match(baby_duckParser.T__15)
                if3()
                self.state = 134
                self.body()


            self.state = 137
            self.match(baby_duckParser.T__1)
            if2()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpresionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._oper_rel = None # Oper_relContext

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(baby_duckParser.ExpContext)
            else:
                return self.getTypedRuleContext(baby_duckParser.ExpContext,i)


        def oper_rel(self):
            return self.getTypedRuleContext(baby_duckParser.Oper_relContext,0)


        def getRuleIndex(self):
            return baby_duckParser.RULE_expresion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpresion" ):
                listener.enterExpresion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpresion" ):
                listener.exitExpresion(self)




    def expresion(self):

        localctx = baby_duckParser.ExpresionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_expresion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.exp()
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 917504) != 0):
                self.state = 141
                localctx._oper_rel = self.oper_rel()
                punto8((None if localctx._oper_rel is None else self._input.getText(localctx._oper_rel.start,localctx._oper_rel.stop)))
                self.state = 143
                self.exp()
                punto9()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Oper_relContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return baby_duckParser.RULE_oper_rel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOper_rel" ):
                listener.enterOper_rel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOper_rel" ):
                listener.exitOper_rel(self)




    def oper_rel(self):

        localctx = baby_duckParser.Oper_relContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_oper_rel)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 917504) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._OPER_EXP = None # Token

        def termino(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(baby_duckParser.TerminoContext)
            else:
                return self.getTypedRuleContext(baby_duckParser.TerminoContext,i)


        def OPER_EXP(self, i:int=None):
            if i is None:
                return self.getTokens(baby_duckParser.OPER_EXP)
            else:
                return self.getToken(baby_duckParser.OPER_EXP, i)

        def getRuleIndex(self):
            return baby_duckParser.RULE_exp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExp" ):
                listener.enterExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExp" ):
                listener.exitExp(self)




    def exp(self):

        localctx = baby_duckParser.ExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_exp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.termino()
            punto4()
            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==24:
                self.state = 152
                localctx._OPER_EXP = self.match(baby_duckParser.OPER_EXP)
                punto2((None if localctx._OPER_EXP is None else localctx._OPER_EXP.text))
                self.state = 154
                self.termino()
                punto4()
                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TerminoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._OPER_TERM = None # Token

        def factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(baby_duckParser.FactorContext)
            else:
                return self.getTypedRuleContext(baby_duckParser.FactorContext,i)


        def OPER_TERM(self, i:int=None):
            if i is None:
                return self.getTokens(baby_duckParser.OPER_TERM)
            else:
                return self.getToken(baby_duckParser.OPER_TERM, i)

        def getRuleIndex(self):
            return baby_duckParser.RULE_termino

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTermino" ):
                listener.enterTermino(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTermino" ):
                listener.exitTermino(self)




    def termino(self):

        localctx = baby_duckParser.TerminoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_termino)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.factor()
            punto5()
            self.state = 171
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==25:
                self.state = 164
                localctx._OPER_TERM = self.match(baby_duckParser.OPER_TERM)
                punto3((None if localctx._OPER_TERM is None else localctx._OPER_TERM.text))
                self.state = 166
                self.factor()
                punto5()
                self.state = 173
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._OPER_EXP = None # Token
            self._ID = None # Token
            self._cte = None # CteContext

        def expresion(self):
            return self.getTypedRuleContext(baby_duckParser.ExpresionContext,0)


        def ID(self):
            return self.getToken(baby_duckParser.ID, 0)

        def cte(self):
            return self.getTypedRuleContext(baby_duckParser.CteContext,0)


        def OPER_EXP(self):
            return self.getToken(baby_duckParser.OPER_EXP, 0)

        def getRuleIndex(self):
            return baby_duckParser.RULE_factor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactor" ):
                listener.enterFactor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactor" ):
                listener.exitFactor(self)




    def factor(self):

        localctx = baby_duckParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_factor)
        self._la = 0 # Token type
        try:
            self.state = 190
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 174
                self.match(baby_duckParser.T__10)
                punto6()
                self.state = 176
                self.expresion()
                self.state = 177
                self.match(baby_duckParser.T__11)
                punto7()
                pass
            elif token in [24, 27, 28, 29]:
                self.enterOuterAlt(localctx, 2)
                self.state = 181
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==24:
                    self.state = 180
                    localctx._OPER_EXP = self.match(baby_duckParser.OPER_EXP)


                self.state = 188
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [27]:
                    self.state = 183
                    localctx._ID = self.match(baby_duckParser.ID)
                    punto1((None if localctx._ID is None else localctx._ID.text), 'ID', (None if localctx._OPER_EXP is None else localctx._OPER_EXP.text))
                    pass
                elif token in [28, 29]:
                    self.state = 185
                    localctx._cte = self.cte()
                    punto1((None if localctx._cte is None else self._input.getText(localctx._cte.start,localctx._cte.stop)), 'cte', (None if localctx._OPER_EXP is None else localctx._OPER_EXP.text))
                    pass
                else:
                    raise NoViableAltException(self)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._ID = None # Token
            self._params = None # ParamsContext

        def ID(self):
            return self.getToken(baby_duckParser.ID, 0)

        def params(self):
            return self.getTypedRuleContext(baby_duckParser.ParamsContext,0)


        def body(self):
            return self.getTypedRuleContext(baby_duckParser.BodyContext,0)


        def vars_(self):
            return self.getTypedRuleContext(baby_duckParser.VarsContext,0)


        def getRuleIndex(self):
            return baby_duckParser.RULE_funcs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncs" ):
                listener.enterFuncs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncs" ):
                listener.exitFuncs(self)




    def funcs(self):

        localctx = baby_duckParser.FuncsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_funcs)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 192
            self.match(baby_duckParser.T__19)
            self.state = 193
            localctx._ID = self.match(baby_duckParser.ID)
            self.state = 194
            localctx._params = self.params()
            nueva_func((None if localctx._ID is None else localctx._ID.text), (None if localctx._params is None else self._input.getText(localctx._params.start,localctx._params.stop)))
            self.state = 196
            self.match(baby_duckParser.T__20)
            self.state = 198
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 197
                self.vars_()


            self.state = 200
            self.body()
            self.state = 201
            self.match(baby_duckParser.T__21)
            self.state = 202
            self.match(baby_duckParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(baby_duckParser.ID)
            else:
                return self.getToken(baby_duckParser.ID, i)

        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(baby_duckParser.TYPE)
            else:
                return self.getToken(baby_duckParser.TYPE, i)

        def getRuleIndex(self):
            return baby_duckParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)
